// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row renders 1`] = `
<div>
  <tr
    class=""
  />
</div>
`;

exports[`Row renders with data 1`] = `
<div>
  <tr
    class=""
  >
    <td>
      <div
        class="h4 table-title text-truncate"
      >
        Foo Bar
      </div>
    </td>
    <td>
      50,000
    </td>
  </tr>
</div>
`;
